--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>February 2025</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1> what up </h1>
     <script src="index.js"></script>
   </body>
 </html>
