--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>February 2025</title>
+    <title>Feb 2025</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> what up </h1>
+    <p> Welcome to my Feb 2025 website! Here is where I will be posting/hosting all of my 
+        content for the month. Why I did this? Because I wanted to! This will only be up for a short while,
+        then I will private this site. Exciting stuff. Feel free to click around. </p>
     <script src="index.js"></script>
   </body>
 </html>
