--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p> Welcome to my Feb 2025 website! Here is where I will be posting/hosting all of my 
         content for the month. Why I did this? Because I wanted to! This will only be up for a short while,
         then I will private this site. Exciting stuff. Feel free to click around. </p>
+    <p> I am trying to be as simple as possible in my web design. Some may call it "unskilled" or "not UI,"
+        but not me .. </p>
     <script src="index.js"></script>
   </body>
 </html>
