--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         then I will private this site. Exciting stuff. Feel free to click around. </p>
     <p> I am trying to be as simple as possible in my web design. Some may call it "unskilled" or "not UI,"
         but not me .. </p>
+
+    <h2> articles I worked on this month </h2>
+    <li> 
+      <ul> Romeo + Juliet </ul>
+    </li>
     <script src="index.js"></script>
   </body>
 </html>
