--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> what up </h1>
+    <header> <h1> what up </h1>
+  </header>
     <p> Welcome to my Feb 2025 website! Here is where I will be posting/hosting all of my 
         content for the month. Why I did this? Because I wanted to! This will only be up for a short while,
         then I will private this site. Exciting stuff. Feel free to click around. </p>
@@ -16,9 +17,11 @@
         but not me .. </p>
 
     <h2> articles I worked on this month </h2>
-    <li> 
-      <ul> Romeo + Juliet </ul>
-    </li>
+    <ul> 
+      <li> Romeo + Juliet review. I hope the director sees it. </li>
+      <li> First Date Conversation Starters </li>
+    </ul>
+    
     <script src="index.js"></script>
   </body>
 </html>
