--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header> <h1> what up </h1>
+    <header> <h1> what up February </h1>
   </header>
-    <p> Welcome to my Feb 2025 website! Here is where I will be posting/hosting all of my 
-        content for the month. Why I did this? Because I wanted to! This will only be up for a short while,
-        then I will private this site. Exciting stuff. Feel free to click around. </p>
-    <p> I am trying to be as simple as possible in my web design. Some may call it "unskilled" or "not UI,"
+    <p> Welcome to my Feb 2025 (one-pager) website! Here is where I will be posting/hosting all of my 
+        content for the month. Why I did this? I bored. This will only be up for a short while,
+        then I will private this site. Exciting stuff. </p>
+    <p> I am trying to be as simple as possible in my web design. Some may call it "lack of skill" or "not UI,"
         but not me .. </p>
 
-    <h2> articles I worked on this month </h2>
+    <h2> articles I wrote on this month </h2>
     <ul> 
       <li> Romeo + Juliet review. I hope the director sees it. </li>
       <li> First Date Conversation Starters </li>
     </ul>
+
+    <h2> general life updates </h2>
+    <p> 
+
+    </p>
     
+    <h2> other static html websites that inspired me </h2>
+    <p> At some point, I would love to organize an HTML zine party where we get together and code.</p>
     <script src="index.js"></script>
   </body>
 </html>
