--- a/index.html
+++ b/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Feb 2025</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Eirian Huang</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <header> <h1> what up February </h1>
-  </header>
-    <p> Welcome to my Feb 2025 (one-pager) website! Here is where I will be posting/hosting all of my 
-        content for the month. Why I did this? I bored. This will only be up for a short while,
-        then I will private this site. Exciting stuff. </p>
-    <p> I am trying to be as simple as possible in my web design. Some may call it "lack of skill" or "not UI,"
-        but not me .. </p>
+    <h1>Speculative East Asias </h1>
 
-    <h2> articles I wrote on this month </h2>
-    <ul> 
-      <li> Romeo + Juliet review. I hope the director sees it. </li>
-      <li> First Date Conversation Starters </li>
+    <p>This is a paragraph! Here's how you make a link: <a href="https://neocities.org">Neocities</a>.</p>
+
+    <p>Here's how you can make <strong>bold</strong> and <em>italic</em> text.</p>
+
+    
+    <img src="/images/ex_machina.gif" class="machina">
+    <img src="/images/glitch.gif" class ="glitch">
+  
+
+    <p>Here's how to make a list:</p>
+
+    <ul>
+      <li>First thing</li>
+      <li>Second thing</li>
+      <li>Third thing</li>
     </ul>
 
-    <h2> general life updates </h2>
-    <p> 
-
-    </p>
-    
-    <h2> other static html websites that inspired me </h2>
-    <p> At some point, I would love to organize an HTML zine party where we get together and code.</p>
-    <script src="index.js"></script>
   </body>
 </html>
