--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <p>Here's how you can make <strong>bold</strong> and <em>italic</em> text.</p>
 
     <div class="seesaw-container">
+      <img src="/images/togawa.jpg" class = "togawa">
     <img src="/images/ex_machina.gif" class="machina">
     <img src="/images/glitch.gif" class ="glitch">
     <img src="/images/ghost_shell.png" class="ghost">
   </div>
+  
   
 
     <p>Here's how to make a list:</p>
