--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <body>
     <h1>Speculative East Asias </h1>
     <h2> Eirian Huang </h2>
-    
+    <p> For best experience view in full screen. </p>
     <p> Who is a cyborg? </p>
 
-    <div class="seesaw-container">
-      
-      <img src="images/togawa.jpg" class = "togawa">
+    <div class="home">
+    <img src="images/togawa.jpg" class = "togawa">
     <img src="images/ex_machina.gif" class="machina">
     <img src="images/glitch.gif" class ="glitch">
     <img src="images/ghost_shell.png" class="ghost">
