--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       </header>     
     
     <div class="home">
-    <!-- <img src="images/togawa.jpg" class = "togawa"> -->
     <a href="about.html" class="togawa-link">
     <figure class="togawa"> <img src = "images/togawa.jpg" alt="Robotic Arm Togawa">
       <figcaption> ABOUT </figcaption>
@@ -26,9 +25,18 @@
       </figure>
     </a>
 
-    <!-- <img src="images/ex_machina.gif" class="machina"> -->
-    <img src="images/glitch.gif" class ="glitch">
-    <img src="images/ghost_shell.png" class="ghost">
+    <a href="intro.html" class="togawa-link">
+      <figure class="glitch"> <img src = "images/glitch.gif" alt="Glitch GIF">
+        <figcaption> BADDIE ASIAN </figcaption>
+      </figure>
+    </a>
+
+    <a href="theory.html" class="togawa-link">
+      <figure class="ghost"> <img src = "images/ghost_shell.png" alt="Ghost Shell">
+        <figcaption> THEORY </figcaption>
+      </figure>
+    </a>
+
   </div>
   
  
@@ -40,8 +48,3 @@
 
   </body>
 </html>
-<script>
-  document.getElementById('menu-toggle').addEventListener('click', function () {
-    document.getElementById('navbar').classList.toggle('hidden');
-  });
-</script>
