--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
   <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body class="intro-page">
-    <header> <h1> Introduction </h1>
+    <header> 
         <nav>
             <ul>
               <li><a href="index.html">HOME</a></li>
