--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Eirian Huang</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
+  <style>
+    body {background-image: url('../images/cloud_atlas.jpg');}
+  </style>
   <body>
     <main>
       <header>
@@ -14,13 +17,13 @@
     
     <div class="home">
     <a href="about.html" class="togawa-link">
-    <figure class="togawa"> <img src = "images/togawa.jpg" alt="Robotic Arm Togawa">
+    <figure class="togawa"> <img src="images/togawa.jpg" alt="Robotic Arm Togawa">
       <figcaption> ABOUT </figcaption>
     </figure>
     </a>
 
     <a href="intro.html" class="togawa-link">
-      <figure class="machina"> <img src = "images/ex_machina.gif" alt="Ex Machina">
+      <figure class="machina"> <img src="images/ex_machina.gif" alt="Ex Machina">
         <figcaption> INTRO </figcaption>
       </figure>
     </a>
@@ -33,7 +36,7 @@
 
     <a href="theory.html" class="togawa-link">
       <figure class="ghost"> <img src = "images/ghost_shell.png" alt="Ghost Shell">
-        <figcaption> THEORY </figcaption>
+        <figcaption> CHINA ROOM </figcaption>
       </figure>
     </a>
 
