--- a/intro.html
+++ b/intro.html
@@ -5,6 +5,9 @@
   <title> Current Happenings </title>
   <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
+<style>
+  body {background-color: lightblue;}
+</style>
 <body class="intro-page">
     <header> 
         <nav>
