--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <style>
-    body {background-color:rgb(168, 182, 245);}
+    body {background-color:rgb(0, 225, 255);}
   </style>
   <body>
     <header> 
@@ -17,11 +17,11 @@
               <li><a href="index.html">HOME</a></li>
               <li><a href="intro.html">INTRO</a></li>
               <li><a href="baddie.html">BADDIE ASIAN</a></li>
-              <li><a href="theory.html">THEORY</a></li>
-              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="theory.html">CHINA ROOM</a></li>
+              <li><a href="about.html" style="color: blue;">ABOUT</a></li>
             </ul>
           </nav> </header>
-    <h1> About </h1>
+    <!-- <h1> About </h1> -->
     <div class="about-text">
     <h4> Me </h4>
     <p> I made this for <a href="https://classes.cornell.edu/browse/roster/SP25/class/ENGL/4567"> ENGL/AAS 4567: Speculative East Asias.</a> 
@@ -34,7 +34,7 @@
         I was inspired by several internet & digital media artists as well as numerous sources. My work is guided by
         current movements such as web brutalism, HTML zines, and general trends to create simple, HTML-driven websites
         that do not conform to current corporate UI/UX trends. Ultimately, the internet should be a fun place that is not 
-        overrun by large corporations, no? 
+        overrun by large corporations. There are no rules as to what websites should look like or who they should serve.
     </p>
     <p> My inspiration can be found on my are.na page as well as linked below.</p>
     <ul> 
@@ -43,7 +43,7 @@
     </ul>
     <h4> Important links! </h4>
     <ul>
-        <li> Report in PDF form (including works cited) </li>
+        <li> Report in PDF form (including my works cited) </li>
     </ul>
 </div>
     </body>
