--- a/baddie.html
+++ b/baddie.html
@@ -6,27 +6,26 @@
   <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <style>
-  body {background-color: rgb(255, 0, 187);}
+  body {background-color: rgb(187, 0, 255);}
 </style>
 <body class="intro-page">
     <header> 
         <nav>
             <ul>
               <li><a href="index.html">HOME</a></li>
-              <li><a href="intro.html" style="color: blue;">INTRO</a></li>
-              <li><a href="baddie.html">BADDIE ASIAN</a></li>
+              <li><a href="intro.html" >INTRO</a></li>
+              <li><a href="baddie.html"style="color: blue;" >BADDIE ASIAN</a></li>
               <li><a href="theory.html">CHINA ROOM</a></li>
               <li><a href="about.html">ABOUT</a></li>
             </ul>
           </nav> </header>
     <!-- <h1> INTRO </h1> -->
-    <div class="intro-all"> 
-      <div class="intro-pics">
-    <img src = "images/ex_machina.gif" alt="Ex Machina" class="machina2"> </img>
-    <img src = "images/haraway.png" alt="Ex Machina" class="haraway"> </img>
+    <div class="all"> 
+      <div class="pics">
+    <img src = "images/baddie.png" alt="Definition of baddie" class="baddie"> </img>
   </div>
-    <div class="textbox"> 
-    <p class="quote"> Communication with the nonhuman addresses its independent life essence; 
+    <div class="t"> 
+    <p> Communication with the nonhuman addresses its independent life essence; 
       interaction with things is experienced as a social relationship where the goal 
       is not control or mastery but attachment. Or to use a stronger word, love. - Bow 112 
     </p>
