--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </figure>
     </a>
 
-    <a href="intro.html" class="togawa-link">
+    <a href="baddie.html" class="togawa-link">
       <figure class="glitch"> <img src = "images/glitch.gif" alt="Glitch GIF">
         <figcaption> BADDIE ASIAN </figcaption>
       </figure>
