--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <style>
-    body {background-image: url('../images/cloud_atlas.jpg');}
+    body {background-image: url('./images/cloud_atlas.jpg');}
   </style>
   <body>
     <main>
