--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eirian Huang</title>
+    <title>BADDIE</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
-  <style>
-    body {background-image: url('../images/cloud_atlas.jpg');}
-  </style>
-  <body>
+
+  <body class="index-bg">
     <main>
       <header>
         <h1> Techno-orientalism & the Asian Cyborg </h1>
