--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="index-bg">
     <main>
       <header>
-        <h1> Techno-orientalism & the Asian Cyborg </h1>
+        <h1> BADDIE (A)S(I)AN: TECHNO-ORIENTALISM & ASIAN CYBORGS </h1>
       </header>     
     
     <div class="home">
