--- a/theory.html
+++ b/theory.html
@@ -7,21 +7,19 @@
     <title> ABOUT </title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
-  <style>
-    body {background-color:#39FF14;}
-  </style>
-  <body>
+
+  <body class="theory">
     <header> 
         <nav>
             <ul>
-              <li><a href="index.html" style="color: black;">HOME</a></li>
-              <li><a href="intro.html" style="color: black;">INTRO</a></li>
-              <li><a href="baddie.html" style="color: black;">BADDIE ASIAN</a></li>
+              <li><a href="index.html" >HOME</a></li>
+              <li><a href="intro.html" >INTRO</a></li>
+              <li><a href="baddie.html" >BADDIE ASIAN</a></li>
               <li><a href="theory.html" style="color: blue;">CHINA ROOM</a></li>
-              <li><a href="about.html" style="color: black;" >ABOUT</a></li>
+              <li><a href="about.html" >ABOUT</a></li>
             </ul>
           </nav> </header>
-    <!-- <h1> About </h1> -->
+ 
     <div class="textbox"> 
         <p class="quote"> Communication with the nonhuman addresses its independent life essence; 
           interaction with things is experienced as a social relationship where the goal 
@@ -37,4 +35,3 @@
     </div>
     </body>
 
-</html> 
