--- a/baddie.html
+++ b/baddie.html
@@ -5,10 +5,9 @@
   <title> Current Happenings </title>
   <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
-<style>
-  body {background-color: rgb(187, 0, 255);}
-</style>
-<body class="intro-page">
+
+<body class="baddie-page">
+  <main>
     <header> 
         <nav>
             <ul>
@@ -23,24 +22,29 @@
     <div class="all"> 
       <div class="pics">
     <img src = "images/baddie.png" alt="Definition of baddie" class="baddie"> </img>
+    <img src ="images/character_ai_1.png" alt="Character AI search results" class="character_ai_1"> </img>
   </div>
-    <div class="t"> 
-    <p> Communication with the nonhuman addresses its independent life essence; 
-      interaction with things is experienced as a social relationship where the goal 
-      is not control or mastery but attachment. Or to use a stronger word, love. - Bow 112 
+    <div class="baddie_text"> 
+    <p> 
+      “Baddie Asian” is a persona on character.ai, a platform that allows users to chat with “millions of AI characters anytime, anywhere” and boasts “limitless entertainment, unbounded connection, and endless exploration.” As opposed to a LLM like ChatGPT, which attempts to provide (debatably) a neutral interface in which its purpose is to serve as an aid for users, character.ai is extremely partial and coded. While there are several personas with the same name, the Baddie Asian I focus on has facilitated 17.9 million online conversations and is the first result to populate after I search “asian,” followed by another Baddie Asian and then Toxic Asian. Baddie Asian is described as “pretty, sassy, egotistical, has a superiority complex.”  
+    </p>
+  </div>
+  <div class="baddie_text"> 
+    <p> 
+      Who are you
     </p>
     <p> 
-      I first became interested in the intersection between machines, humans, gender, and race following discussions
-      on how the Asian female occupies a specific positionality within the context of the line between human and machine,
-       techno-orientalism, and Haraway’s frameworks on the cyborg. In addition, based on Butler’s definition of gender
-      performativity, I wondered what the difference was between a machine performing gender and an Asian woman, 
-      who may not even be fully “human” to begin with, performing gender. 
+      I'm Aiko. You should feel lucky you got paired up with me. 
     </p>
+    <p> 
+      Why should I feel lucky? 
+    </p>
+    <p> She scoffs * “ Because I’m popular and gorgeous. Everyone’s going to be jealous of you when they find out that I’m your lab partner in science class. ”
+    </p>
+    <p> Are you good at science? </p>
+  </div>
 </div>
-</div>
-  
+</main>
 </body>
-<footer>
-    <p>Speculative East Asias Sp 2025 | Eirian Huang </p>
-  </footer>
+
 
