--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <style>
-    body {background-color:rgb(0, 225, 255);}
+    body {background-color:rgb(130, 217, 255);}
   </style>
   <body>
-    <header> 
+    <!-- <header> </header> -->
         <nav>
             <ul>
               <li><a href="index.html">HOME</a></li>
@@ -20,7 +20,7 @@
               <li><a href="theory.html">CHINA ROOM</a></li>
               <li><a href="about.html" style="color: blue;">ABOUT</a></li>
             </ul>
-          </nav> </header>
+          </nav> 
     <!-- <h1> About </h1> -->
     <div class="about-text">
     <h4> Me </h4>
