--- a/baddie.html
+++ b/baddie.html
@@ -8,7 +8,7 @@
 
 <body class="baddie-page">
   <main>
-    <header> 
+    
         <nav>
             <ul>
               <li><a href="index.html">HOME</a></li>
@@ -17,7 +17,7 @@
               <li><a href="theory.html">CHINA ROOM</a></li>
               <li><a href="about.html">ABOUT</a></li>
             </ul>
-          </nav> </header>
+          </nav> 
     <!-- <h1> INTRO </h1> -->
     <div class="all"> 
       <div class="pics">
