--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
  
   <h2> Speculative East Asias </h2>
 </main>
-  <footer>
+  <!-- <footer>
     <p>Speculative East Asias Sp 2025 | Eirian Huang </p>
-  </footer>
+  </footer> -->
 
   </body>
 </html>
