--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
   body {background-color: rgb(255, 0, 187);}
 </style>
 <body class="intro-page">
-    <header> 
+    <!-- <header> </header> -->
         <nav>
             <ul>
               <li><a href="index.html">HOME</a></li>
@@ -18,7 +18,7 @@
               <li><a href="theory.html">CHINA ROOM</a></li>
               <li><a href="about.html">ABOUT</a></li>
             </ul>
-          </nav> </header>
+          </nav> 
     <!-- <h1> INTRO </h1> -->
     <div class="intro-all"> 
       <div class="intro-pics">
@@ -41,7 +41,7 @@
 </div>
   
 </body>
-<footer>
+<!-- <footer>
     <p>Speculative East Asias Sp 2025 | Eirian Huang </p>
-  </footer>
+  </footer> -->
 
