--- a/theory.html
+++ b/theory.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="theory">
-    <header> 
+    <!-- <header> </header> -->
         <nav>
             <ul>
               <li><a href="index.html" >HOME</a></li>
@@ -18,7 +18,7 @@
               <li><a href="theory.html" style="color: blue;">CHINA ROOM</a></li>
               <li><a href="about.html" >ABOUT</a></li>
             </ul>
-          </nav> </header>
+          </nav> 
  
     <div class="textbox"> 
         <p class="quote"> Communication with the nonhuman addresses its independent life essence; 
