--- a/about.html
+++ b/about.html
@@ -38,12 +38,13 @@
     </p>
     <p> My inspiration can be found on my are.na page as well as linked below.</p>
     <ul> 
-        <li> https://coolguy.website/basic-html-competency-is-the-new-punk-folk-explosion/ </li>
-        <li> https://www.brutalistwebsites.com/ </li>
+        <li> ✦ https://coolguy.website/basic-html-competency-is-the-new-punk-folk-explosion/ </li>
+        <li> ✦ https://www.brutalistwebsites.com/ </li>
+        <li> ✦ <a href="https://www.cyberfeminismindex.com/">Cyberfeminism index</a> </li>
     </ul>
     <h4> Important links! </h4>
     <ul>
-        <li> Report in PDF form (including my works cited) </li>
+        <li>✦ Report in PDF form (including my works cited) </li>
     </ul>
 </div>
     </body>
