--- a/intro.html
+++ b/intro.html
@@ -22,8 +22,14 @@
     <!-- <h1> INTRO </h1> -->
     <div class="intro-all"> 
       <div class="intro-pics">
+        <figure>
     <img src = "images/ex_machina.gif" alt="Ex Machina" class="machina2"> </img>
-    <img src = "images/haraway.png" alt="Ex Machina" class="haraway"> </img>
+    <figcaption class="fig"> <a href="https://tenor.com/view/sonoya-mizuno-ex-machina-gif-11074803">Gif source</a> </figcaption>
+  </figure>
+
+    <figure> <img src = "images/haraway.png" alt="Ex Machina" class="haraway"> </img>
+      <figcaption class="fig"> <a href="https://theanarchistlibrary.org/library/donna-haraway-a-cyborg-manifesto">Image source</a> </figcaption>
+    </figure>
   </div>
     <div class="textbox"> 
     <p class="quote"> Communication with the nonhuman addresses its independent life essence; 
@@ -38,6 +44,11 @@
       who may not even be fully “human” to begin with, performing gender. 
     </p>
 </div>
+<figure>
+<img src="images/guyy.png" alt="Guy" class="guy"> </img> 
+<figcaption class="fig"> <a href="https://metalmagazine.eu/en/post/metal-no-43-story-10">Image source</a> </figcaption>
+
+</figure>
 </div>
   
 </body>
