--- a/about.html
+++ b/about.html
@@ -46,6 +46,11 @@
     <ul>
         <li>✦ Report in PDF form (including my works cited) </li>
     </ul>
+
+    <figure>
+      <img src="images/gender_bender.png" alt="Gender bender robot"> </img> 
+      <figcaption class="fig"> <a href="https://pechblenda.hotglue.me/?transhackfeminismo">Image source</a> </figcaption>
+      </figure>
 </div>
     </body>
 
