--- a/intro.html
+++ b/intro.html
@@ -44,12 +44,16 @@
       who may not even be fully “human” to begin with, performing gender. 
     </p>
 </div>
+
+<div>
 <figure>
 <img src="images/guyy.png" alt="Guy" class="guy"> </img> 
 <figcaption class="fig"> <a href="https://metalmagazine.eu/en/post/metal-no-43-story-10">Image source</a> </figcaption>
-
 </figure>
+
+
 </div>
+
   
 </body>
 <!-- <footer>
