--- a/about.html
+++ b/about.html
@@ -36,12 +36,15 @@
         that do not conform to current corporate UI/UX trends. Ultimately, the internet should be a fun place that is not 
         overrun by large corporations. There are no rules as to what websites should look like or who they should serve.
     </p>
-    <p> My inspiration can be found on my are.na page as well as linked below.</p>
-    <ul> 
-        <li> ✦ https://coolguy.website/basic-html-competency-is-the-new-punk-folk-explosion/ </li>
-        <li> ✦ https://www.brutalistwebsites.com/ </li>
+
+        <li> ✦ <a href="https://coolguy.website/basic-html-competency-is-the-new-punk-folk-explosion/"> 
+          Basic HTML Competency is the New Punk Folk Explosion! </a> </li>
+        <li> ✦ <a href="https://www.brutalistwebsites.com/">Brutalist Websites </a> </li>
+        <li> ✦ <a href="http://idyrself.com/"> Identify Yourself </a></li>
         <li> ✦ <a href="https://www.cyberfeminismindex.com/">Cyberfeminism index</a> </li>
     </ul>
+    <p> Broader sources can be found my are.na page.</p>
+    <ul> 
     <h4> Important links! </h4>
     <ul>
         <li>✦ Report in PDF form (including my works cited) </li>
