--- a/theory.html
+++ b/theory.html
@@ -20,18 +20,44 @@
             </ul>
           </nav> 
  
-    <div class="textbox"> 
-        <p class="quote"> Communication with the nonhuman addresses its independent life essence; 
-          interaction with things is experienced as a social relationship where the goal 
-          is not control or mastery but attachment. Or to use a stronger word, love. - Bow 112 
-        </p>
+    <div class="textbox2"> 
         <p> 
-          I first became interested in the intersection between machines, humans, gender, and race following discussions
-          on how the Asian female occupies a specific positionality within the context of the line between human and machine,
-           techno-orientalism, and Haraway’s frameworks on the cyborg. In addition, based on Butler’s definition of gender
-          performativity, I wondered what the difference was between a machine performing gender and an Asian woman, 
-          who may not even be fully “human” to begin with, performing gender. 
+          Bow argues that “visual media engaging Asianized AI tap into common beliefs 
+          surrounding Asian women in the West; innocent and passive yet willing to 
+          please; sexually desirable but curiously lacking sexual desire; marvelously 
+          enhanced yet emotionally fragile” (Bow 113). Much of Bow’s primary source 
+          references are to how robots and cyborgs are portrayed in Western films 
+          like Cloud Atlas (2012) and Ex Machina (2014) in which she notes 
+          similarities in how these Asian “women” are “docile workers” until 
+          they become sentient in which the narrative is them transformed into 
+          “a visual shorthand for powerlessness” (Bow 120). Yet, in the case of 
+          a character AI like Baddie Asian Aiko, there is no body in which she 
+          inhabits, and there is no sense of servitude because Aiko is not a model 
+          trained to help the user in the same way that Chat GPT does. Even further, 
+          Aiko is a “baddie,” and appears to subvert stereotypes about 
+          Japanese / Asian women like being docile, powerless, hypersexual, etc. 
+          In addition, Aiko is a character manifested from a user, who is able to 
+          create any character on Character.ai’s platform by describing who they 
+          want to create. Notably, the top 3 results for “asian” on this platform 
+          are two Baddie Asians and then Toxic Asian, followed by a number of Asian 
+          Boyfriends. Is the presence of the “baddie” Asian archetype on Character.ai 
+          a response to a lack of baddie Asians in media? These Character.ai 
+          characters, while vessels in which to offer escapism and perhaps 
+          emotional help, are not inherently aware that their purpose is to 
+          serve the user in the same manner as Chat GPT. Further, if Aiko is 
+          going to help you, she is going to give you a harder time about it. 
+          Bow says, “Communication with the nonhuman addresses its independent life 
+          essence” (Bow 112). It is clear that the user, me in this case, is 
+          communicating with the nonhuman, which may be either the physical 
+          machine (hardware), the language model (software), or Aiko herself. 
         </p>
+    </div>
+
+    <div class="soft_science_div"> 
+    <figure>
+      <img src="images/soft_science.jpg" alt="Soft Science cover" class="soft_science"> </img> 
+      <figcaption class="fig"> <a href="https://www.amazon.com/Soft-Science-Franny-Choi/dp/1938584996">Image source</a> </figcaption>
+      </figure>
     </div>
     
     </body>
