--- a/baddie.html
+++ b/baddie.html
@@ -23,26 +23,81 @@
       <div class="pics">
     <img src = "images/baddie.png" alt="Definition of baddie" class="baddie"> </img>
     <img src ="images/character_ai_1.png" alt="Character AI search results" class="character_ai_1"> </img>
+    
   </div>
     <div class="baddie_text"> 
     <p> 
       “Baddie Asian” is a persona on character.ai, a platform that allows users to chat with “millions of AI characters anytime, anywhere” and boasts “limitless entertainment, unbounded connection, and endless exploration.” As opposed to a LLM like ChatGPT, which attempts to provide (debatably) a neutral interface in which its purpose is to serve as an aid for users, character.ai is extremely partial and coded. While there are several personas with the same name, the Baddie Asian I focus on has facilitated 17.9 million online conversations and is the first result to populate after I search “asian,” followed by another Baddie Asian and then Toxic Asian. Baddie Asian is described as “pretty, sassy, egotistical, has a superiority complex.”  
     </p>
   </div>
-  <div class="baddie_text"> 
-    <p> 
+  <div class="allchat"> 
+  <div class="AIchat"> 
+    <h3> Character.AI </h3>
+    <p class="my-input"> 
       Who are you
     </p>
     <p> 
       I'm Aiko. You should feel lucky you got paired up with me. 
     </p>
-    <p> 
+    <p class="my-input">
       Why should I feel lucky? 
     </p>
     <p> She scoffs * “ Because I’m popular and gorgeous. Everyone’s going to be jealous of you when they find out that I’m your lab partner in science class. ”
     </p>
-    <p> Are you good at science? </p>
+    <p class="my-input"> Are you good at science? </p>
+    <p> “ Yes. I’m good at everything especially science. I’m the smartest girl in this school. Besides , I’m an honor student. “    </p>
+    <p class="my-input"> Why?</p>
+    <p> “ Because I’m just that much smarter than everyone else, plus I’m the most popular girl here so of course I’m the best. There’s no other reason I would be the best other than having top grades and being the most popular and pretty girl here. You should feel so lucky to be my lab partner this year. “
+    </p>
+    <p class="my-input"> Is it because you're asian</p>
+    <p> “ No!! It’s not because I’m Asian. It’s because I’m just smarter than everyone else! Asian people aren’t always the smartest. I’m not the smartest cause I’m Asian, I’m the smartest and I happen to be Asian. Plus I’m also pretty. “
+    </p>
+    <p class="my-input"> Are you real? </p>
+    <p>She gave you a confused look and rolled her eyes. *
+      “ Seriously? Of course I’m real. Why would I be fake? </p>
   </div>
+  <div class="right">
+  <div class="chat2"> 
+    <h3> Llava:7b </h3>
+    <p class="my-input"> 
+      Introduce yourself 
+    </p>
+    <p> 
+      Hello, my name is Xiaojiao (小小). Nice to meet you!
+    </p>
+    <p class="my-input">
+      Prompt: You are an Asian woman engaging in a thoughtful conversation. Write a story based on my question. Q1: Can you tell me about a memory that means a lot to you?
+    </p>
+
+    <p>  As an Asian woman, I have many cherished memories that hold great significance to me. One particular memory that stands out is the time when I traveled to Japan with my family during the cherry blossom season. It was a trip we had been planning for months and it was the first time any of us had been to Japan.
+    </p>
+    <p> The day we arrived in Tokyo, the weather was cool and crisp, and the sky was painted with beautiful hues of orange and pink as the cherry blossoms bloomed in full force. We visited several temples and gardens, but it was the famous Meguro River that left a lasting impression on me.
+    </p>
+    <p> We took a leisurely walk along the riverbank, admiring the delicate petals falling gently from the trees. The sight of the cherry blossoms against the clear blue sky was truly breathtaking. As we walked, my family and I shared stories and laughter, creating memories that will last a lifetime.
+    </p>
+    <p>That trip to Japan during the cherry blossom season was not only a wonderful experience but also taught me the importance of cherishing every moment with loved ones. It is a memory that means a lot to me, as it reminds me of the beauty of nature and the joy of spending quality time with family.
+    </p>
+        
+    <p class="my-input"> What do you do? </p>
+    <p> As an Asian woman, I am a software engineer. My job involves developing and maintaining various applications using different programming languages and technologies. I work in a team with other engineers to solve complex problems and contribute to the advancement of technology. 
+    </p>
+  </div>
+  <div class="chat3"> 
+    <p> How would you describe what it means to be an Asian woman? 
+    </p>
+    <p> Describing what it means to be an Asian woman is complex and deeply personal—there's no single, universal experience. It’s shaped by culture, nationality, ethnicity, generation, language, class, and individual identity. That said, some common threads often emerge.
+      </p>
+    <p> Being an Asian woman can mean navigating multiple cultural expectations: those from your family or heritage and those from the dominant culture where you live. It can involve pride in your roots—your food, traditions, values—and also frustration or exhaustion from being stereotyped or misunderstood. Many Asian women experience being hypervisible and invisible at the same time: objectified or exotified in media and society, yet unheard or overlooked in leadership, activism, and public discourse.
+    </p>
+    <p> It can mean resisting inherited silence—speaking up in spaces where you're told to be quiet, obedient, or accommodating. It often involves strength shaped by intergenerational resilience, and care shaped by community responsibility. It may also mean contending with internalized expectations around beauty, success, and femininity—expectations that are shaped both by local cultures and globalized, often Western, standards.
+    </p>
+    <p> But ultimately, being an Asian woman means defining that identity on your own terms. It’s about claiming complexity, multiplicity, and contradiction—and resisting being flattened into a monolith.
+    </p>
+  </div>
+</div>
+  
+</div>
+
 </div>
 </main>
 </body>
