--- a/baddie.html
+++ b/baddie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title> Current Happenings </title>
+  <title> BADDIE ASIAN </title>
   <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
@@ -29,6 +29,23 @@
     <p> 
       “Baddie Asian” is a persona on character.ai, a platform that allows users to chat with “millions of AI characters anytime, anywhere” and boasts “limitless entertainment, unbounded connection, and endless exploration.” As opposed to a LLM like ChatGPT, which attempts to provide (debatably) a neutral interface in which its purpose is to serve as an aid for users, character.ai is extremely partial and coded. While there are several personas with the same name, the Baddie Asian I focus on has facilitated 17.9 million online conversations and is the first result to populate after I search “asian,” followed by another Baddie Asian and then Toxic Asian. Baddie Asian is described as “pretty, sassy, egotistical, has a superiority complex.”  
     </p>
+    <a href="https://character.ai/chat/RVE3nyP3WCt-lzC-i7cPuPzwUAKXt5A4-unBfI-ulK0" class="button">
+    <button> ~ Talk to Baddie Asian Here ~ </button> </a>
+  </div>
+  <div class="ad1">
+    <figure>
+      <img src="images/baddie_asian.jpg" alt="Baddie Asian" class="ad-img"> </img> 
+  
+      </figure> 
+  <div class="ad">
+    <p class="ad_head"> 🌟Aiko's Premium AI Persona: The Ultimate Package🌟 </p>
+    <p> Superiority Complex: ✨ Comes pre-installed with a genuinely superior attitude.</p>
+    <p> Ego Boost: Guaranteed to inflate your ego (or deflate it, depending). 💅</p>
+    <p> Science Genius Mode: Troubleshoot lab disasters with flawless intelligence. Also useful for roasting dumb questions. 🔬✨</p>
+  </div>
+  <figure>
+    <img src="images/baddie_asian.jpg" alt="Baddie Asian" class="ad-img"> </img> 
+    </figure>
   </div>
   <div class="allchat"> 
   <div class="AIchat"> 
@@ -83,7 +100,8 @@
     </p>
   </div>
   <div class="chat3"> 
-    <p> How would you describe what it means to be an Asian woman? 
+    <h3 class="stickyh3"> Chat GPT / GPT-04 </h3>
+    <p class="my-input"> How would you describe what it means to be an Asian woman? 
     </p>
     <p> Describing what it means to be an Asian woman is complex and deeply personal—there's no single, universal experience. It’s shaped by culture, nationality, ethnicity, generation, language, class, and individual identity. That said, some common threads often emerge.
       </p>
