--- a/intro.html
+++ b/intro.html
@@ -95,6 +95,14 @@
   <img src="images/gender_bender.png" alt="Gender bender robot" class="bender"> </img> 
   <figcaption class="fig"> <a href="https://pechblenda.hotglue.me/?transhackfeminismo">Image source</a> </figcaption>
   </figure>
+<div class="how-to"> 
+<p> How to use this website: </p>
+<ol>
+  <li> Go to BADDIE ASIAN page for exploration </li>
+  <li> Visit CHINA ROOM for theory and explanation </li>
+  <li> Regret life choices?? </li>
+</ol>
+</div>
 </div>
 
   </div>
